objects/Work_Order_Skills__c.object
<CustomObject>
    <description>This is a junction object to support the many-to-many relationship between a Work Order and the Skills required to perform it.  These are separate from the Location specific Habilitation Requirements associated with all work orders performed at a given location.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Any comments relevant to the relationship between this skill and the master work order</description>
        <inlineHelpText>Any comments relevant to the relationship between this skill and the master work order</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>Skill__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkillLevel__c</fullName>
        <label>Skill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The skill that is being tied to the Work Order by this record.</description>
        <inlineHelpText>The skill that is being tied to the Work Order by this record.</inlineHelpText>
        <label>Skill</label>
        <referenceTo>SVMXC__Skill__c</referenceTo>
        <relationshipLabel>Work Order Skills</relationshipLabel>
        <relationshipName>Work_Order_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech_IPchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech_IPchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <description>The Master Work order to which this this work order skill record is a detail.</description>
        <inlineHelpText>The Master Work order to which this this work order skill record is a detail.</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Work Order Skills</relationshipLabel>
        <relationshipName>Work_Order_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Order Skill</label>
    <nameField>
        <displayFormat>WOS-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SkillLevelValidation</fullName>
        <active>true</active>
        <description>The skill level of the expertise cannot be higher than the highest level in the skill.</description>
        <errorConditionFormula>NOT( $User.BypassVR__c ) 
&amp;&amp;  SkillLevel__c &gt;  Skill__r.SVMXC__Skill_Level_High__c</errorConditionFormula>
        <errorDisplayField>SkillLevel__c</errorDisplayField>
        <errorMessage>The Skill Level cannot be higher than the Skill Level - High on Skill</errorMessage>
    </validationRules>
</CustomObject>